Save latest changes

--- a/notebook/researchs.ipynb
+++ b/notebook/researchs.ipynb
@@ -4020,11 +4020,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "0b4b9bdc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "pickle.dump(model,open('artifacts/model.pkl','wb'))\n",
+    "pickle.dump(book_names,open('artifacts/book_names.pkl','wb'))\n",
+    "pickle.dump(final_rating,open('artifacts/final_rating.pkl','wb'))\n",
+    "pickle.dump(book_pivot,open('artifacts/book_pivot.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "8ed62168",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['1984', '1st to Die: A Novel', '2nd Chance', '4 Blondes',\n",
+       "       '84 Charing Cross Road', 'A Bend in the Road', 'A Case of Need',\n",
+       "       'A Child Called \\It\\\": One Child's Courage to Survive\"',\n",
+       "       'A Civil Action', 'A Cry In The Night',\n",
+       "       ...\n",
+       "       'Winter Solstice', 'Wish You Well', 'Without Remorse',\n",
+       "       'Wizard and Glass (The Dark Tower, Book 4)', 'Wuthering Heights',\n",
+       "       'Year of Wonders', 'You Belong To Me',\n",
+       "       'Zen and the Art of Motorcycle Maintenance: An Inquiry into Values',\n",
+       "       'Zoya', '\\O\\\" Is for Outlaw\"'],\n",
+       "      dtype='object', name='title', length=742)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "e6ea176c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_book(book_name):\n",
+    "    book_id = np.where(book_pivot.index == book_name)[0][0]\n",
+    "    distance, suggestion = model.kneighbors(book_pivot.iloc[book_id,:].values.reshape(1,-1), n_neighbors=6 )\n",
+    "    \n",
+    "    for i in range(len(suggestion)):\n",
+    "            books = book_pivot.index[suggestion[i]]\n",
+    "            for j in books:\n",
+    "                if j == book_name:\n",
+    "                    print(f\"You searched '{book_name}'\\n\")\n",
+    "                    print(\"The suggestion books are: \\n\")\n",
+    "                else:\n",
+    "                    print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "00144f63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You searched '2nd Chance'\n",
+      "\n",
+      "The suggestion books are: \n",
+      "\n",
+      "The Next Accident\n",
+      "The Ghost\n",
+      "Exclusive\n",
+      "Last Man Standing\n",
+      "Unspeakable\n"
+     ]
+    }
+   ],
+   "source": [
+    "book_name = \"2nd Chance\"\n",
+    "recommend_book(book_name)"
+   ]
   }
  ],
  "metadata": {
